# MLE-dojo-project

./: .gitignore  EVALUATION_METRICS.md  PIPELINE_REVIEW.md  README.md  WEEK1_FIXES_SUMMARY.md  pyproject.toml
.claude/agents/: ml-agent-architect.md
MLE-Dojo/: README.md
agent/: __init__.py
agent/configs/: __init__.py  agent_config.yaml  eval_config.yaml  training_config.yaml
agent/core/: __init__.py  base_agent.py  local_model.py  prompts.py
agent/training/: __init__.py  evaluate.py  generate_trajectories.py  train_rl.py
agent/wrappers/: __init__.py  mledojo_wrapper.py  verl_wrapper.py
containers/: README.md  mle_agent.def  requirements.txt
data/prepare_logs/: failed.txt
experiments/: README.md
experiments/baselines/baseline_20251111_141450/: agent_config.yaml
experiments/baselines/baseline_20251111_141450/evaluation/: eval_results_default.json
experiments/baselines/baseline_20251111_141450/trajectories/: summary.json  trajectory_0000.json  trajectory_0001.json  trajectory_0002.json  trajectory_0003.json  trajectory_0004.json  trajectory_0005.json  trajectory_0006.json  trajectory_0007.json  trajectory_0008.json  trajectory_0009.json
experiments/week1_test/test_5751808/: TEST_INFO.md  eval_config.yaml
experiments/week1_test/test_5751808/episode_0/: execution_1.py
experiments/week1_test/test_5751824/: TEST_INFO.md  agent_config.yaml
images/: README.md
mle-dojo/: README.md
scripts/: README.md  monitor_week1_test.sh  preflight_check.sh  prepare-competition.sh  run_baseline.sh  run_week1_test.sh  set_up_env.sh  submit_slurm.sh  submit_week1_test.sh  test_env.py  train_rl.sh
tests/: README.md  test_agent.py
